--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "brownie-ui-native",
   "version": "0.0.1",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/infobiotech/brownie-ui-native"
+  },
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
